fix alignment for graph dropdown

--- a/public/css/faces.css
+++ b/public/css/faces.css
@@ -92,6 +92,7 @@ h1 {
 
 .controls {
   margin: 0 auto;
+  text-align: left;
   width: 798px;
 }
 
